@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 1.0.1
+ + Added hardcore death penalty prevention! Disable stat loss in certain regions
 
 Version 1.0.0
  + First release
